# azusa_async

./: .dockerignore  Cargo.toml  docker-compose.yaml  log4rs.yaml
docker/: Dockerfile
front/: package.json
front/src/: index.js
front/src/Item/: index.js
src/: app.rs  download.rs  error.rs  item.rs  lock_copy.rs  main.rs  progress.rs  table.rs
