[package]
name = "azusa"
version = "0.1.0"
authors = ["techno-tanoC <develop.tanoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["native-tls-vendored", "stream"] }
bytes = "0.5"
tempfile = "3.1"
uuid = { version = "0.8", features = ["v4"] }
indexmap = "1.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.2"
log = "0.4"
log4rs = "0.11"
